added logic to display recipes on index page.